#382: fixed submenu collapse behaviour

--- a/system/widgets/submenu/sidebar.css
+++ b/system/widgets/submenu/sidebar.css
@@ -3,7 +3,7 @@
     height: 100%;
     width: 0;
     position: fixed;
-    z-index: 1;
+    z-index: 100;
     top: 0;
     left: 0;
     background-color: #f7f7f7;
